--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "jira-ticket-detail-fetcher",
+  "name": "jira-gitlab-merge-request-poc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.11.0",
-    "dotenv": "17.2.1"
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "google-auth-library": "^10.2.1",
+    "node-fetch": "^2.7.0"
   }
 }
