--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-JIRA_BASE_URL=https://jyotiminhas8.atlassian.net/
+JIRA_BASE_URL=https://jyotiminhas8.atlassian.net
 JIRA_EMAIL=jyoti.minhas8@gmail.com
 JIRA_API_TOKEN=ATATT3xFfGF0VhY4cihl68h_WW4Fz-mtWSPKhPsqKW8C-X31hOCQJ1sNbah5USgsrSXn-nDiaW2-5XpFivwNjujNyZNAcVZ4hMgCTUeI5QVzOXwaAbt71k-Tmc83mDx9fX4jXYS0cqZUVOnX8F58_UkbteHoT-M4A3vTowjDnTQzgECpYjUqeNQ=2E850897
+JIRA_QA_EMAIL=jyoti.minhas8@gmail.com
+
 
 GITLAB_TOKEN=glpat-gUXaSqRoj4CjKk9lKOMGfm86MQp1OjRydzNoCw.01.121jrxb02
 GITLAB_PROJECT_ID=73288483
@@ -10,3 +12,4 @@ GITLAB_BRANCH_NAME=CRAA-6-Splash-change-colour
 
 GEMINI_API_KEY=AIzaSyCIh8qyu3q2IrTMa1EsO1qT8y_zQHcauyI
 GEMINI_MODEL=gemini-1.5-flash
+
